Creacion parrafo en index.html para ver en github

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Creacion de proyecto</h1>
     <p>Este es un parrafo en index.html</p>
+    <p>Parrafo para comprobar con github</p>
 </body>
 </html>
