--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>Este es un parrafo en index.html</p>
     <p>Parrafo para comprobar con github</p>
     <p>Parrafo creado desde github</p>
-    <p>Parrafo creado desde la rama tecnico1</p>
+    <p>Parrafo creado desde la rama tecnico1 soy tecnico1</p>
 </body>
 </html>
