Creacion de parrafo en index.html

--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Creacion de proyecto</h1>
-    <p>Este es un parrafo en index.html</p>
-    <p>Parrafo para comprobar con github</p>
-    <p>Parrafo creado desde github</p>
-    <p>Parrafo creado desde la rama tecnico1 MAIN</p>
-    <p>Parrafo creado desde la rama tecnico1 soy tecnico1</p>
+    <p>Parrafo en index.html</p>
 </body>
 </html>
